# update-available

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml
examples/: crates_io.rs  crates_io_async.rs  example.rs  github.rs  github_async.rs
scripts/: create_release.ps1
src/: data.rs  lib.rs  logic.rs  test.rs
